--- a/app/src/main/res/xml/widget_data.xml
+++ b/app/src/main/res/xml/widget_data.xml
@@ -2,4 +2,6 @@
     android:initialLayout="@layout/widget"
     android:minHeight="40dp"
     android:minWidth="110dp"
-    android:updatePeriodMillis="2400000" />
+    android:updatePeriodMillis="2400000"
+    android:previewImage="@drawable/widget_icon"
+    android:resizeMode="horizontal|vertical" />
