--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -9,7 +9,7 @@
         android:id="@+id/imageView"
         android:layout_width="57dp"
         android:layout_height="57dp"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="8dip"
         android:src="@drawable/ic_launcher_background" />
 
@@ -17,8 +17,8 @@
         android:id="@+id/heading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_toRightOf="@id/imageView"
+        android:layout_alignParentStart="true"
+        android:layout_toEndOf="@id/imageView"
         android:singleLine="true"
         android:textSize="14sp"
         android:textStyle="bold"
@@ -28,10 +28,10 @@
         android:id="@+id/content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_below="@id/heading"
         android:layout_marginTop="5dip"
-        android:layout_toRightOf="@id/imageView"
+        android:layout_toEndOf="@id/imageView"
         android:textSize="14sp"
         android:text="Content" />
 
