--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -5,6 +5,12 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/tv_background"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="#00a2ff" />
+
+    <TextView
         android:id="@+id/tvBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -30,7 +36,7 @@
         android:text="@string/checkbox" />
 
     <ListView
-        android:id="@+id/listView"
+        android:id="@+id/list_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/tvCheck"
