--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,7 +36,7 @@
 
     <TextView
         android:id="@+id/tvDate"
-        android:layout_width="100dp"
+        android:layout_width="80dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
         android:layout_marginEnd="4dp"
@@ -44,6 +44,7 @@
         android:layout_marginTop="8dp"
         android:gravity="fill_vertical"
         android:text="@string/date"
+        android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Menu"
         app:layout_constraintBottom_toTopOf="@+id/tvTime"
         app:layout_constraintEnd_toStartOf="@+id/etNote"
