Fix widget test for API 21
 Now test gets Package name from BuildConfig.
 For API 21 widget package name "com.android.launcher".
 Add delay after addMemo for ended async task.

--- a/app/src/main/res/layout/widget.xml
+++ b/app/src/main/res/layout/widget.xml
@@ -33,7 +33,8 @@
         android:layout_below="@+id/tvTitle"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="8dp"
-        android:text="@string/checkbox" />
+        android:text="@string/checkbox"
+        android:textColor="#000" />
 
     <ListView
         android:id="@+id/lvItemList"
