Fix back button behavior

--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -71,7 +71,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDate" />
 
-    <EditText
+    <com.example.user.eventest.EditMemoView
         android:id="@+id/etNote"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
