--- a/app/src/main/res/menu/action_bar_menu.xml
+++ b/app/src/main/res/menu/action_bar_menu.xml
@@ -10,6 +10,7 @@
 
     <item
         android:id="@+id/menuSettings"
+        android:icon="@drawable/ic_settings_white_24px"
         android:title="@string/action_settings"
         app:showAsAction="never" />
 
