Non image attachment show icon
Fix row height

--- a/app/src/main/res/layout/list_row.xml
+++ b/app/src/main/res/layout/list_row.xml
@@ -2,7 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="@dimen/list_layout_height"
     android:background="?android:attr/activatedBackgroundIndicator">
 
 
@@ -52,8 +52,8 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="68dp"
-        android:layout_height="68dp"
+        android:layout_width="@dimen/list_layout_height"
+        android:layout_height="@dimen/list_layout_height"
         android:layout_marginEnd="8dp"
         android:contentDescription="@string/todo_icon"
         android:cropToPadding="false"
