--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="popup_width">360dp</dimen>
     <dimen name="popup_height">350dp</dimen>
+    <dimen name="list_layout_height">68dp</dimen>
 </resources>
